[package]
name = "kudos_ink"
version= "0.1.0"
authors = ["Igor Papandinas", "Leandro Palazzolo"]
edition = "2021"

license = "MIT"
readme = "README.md"
repository = "https://github.com/kudos-ink/contracts"
description = "Kudos Ink smart contracts for automated contribution rewards."
keywords = ["wasm", "smart-contracts", "blockchain", "ink"]
categories = ["no-std", "embedded"]
include = ["Cargo.toml", "src/**/*.rs"]

[dependencies]
ink = { version = "4.3.0", default-features = false }

scale = { package = "parity-scale-codec", version = "3", default-features = false, features = ["derive"] }
scale-info = { version = "2.6", default-features = false, features = ["derive"], optional = true }

# OpenBrush dependency
openbrush = { git = "https://github.com/Brushfam/openbrush-contracts", version = "4.0.0-beta", default-features = false, features = ["ownable"] }

# These dependencies
kudos_ink_contracts = { path = "contracts", default-features = false }

[lib]
name = "kudos_ink"
path = "src/lib.rs"
crate-type = [
    "rlib",
]

[features]
default = ["std"]
std = [
    "ink/std",
    "scale/std",
    "scale-info/std",
    # OpenBrush dependency
    "openbrush/std",
]